--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "node server.js",
+    "check": "node --check app.js && node --check server.js",
     "prisma:generate": "prisma generate",
     "prisma:push": "prisma db push"
   },
@@ -19,7 +20,9 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "nodemailer": "^8.0.1"
+    "nodemailer": "^8.0.1",
+    "sanitize-html": "^2.17.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "prisma": "^6.3.1"
