--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "prisma:push": "prisma db push"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.3.1",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.9.0",
     "cors": "^2.8.6",
     "dotenv": "^17.2.4",
-    "express-rate-limit": "^7.5.0",
     "express": "^5.2.1",
+    "express-rate-limit": "^7.5.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
