Remise de postgresql comme db

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ RATE_LIMIT_MAX_REQUESTS=300
 
 
 # Variables séparées 
-DB_HOST=127.0.01
+DB_HOST=localhost
 DB_NAME=odecmsdg_odecmsdg_site
 DB_USER=odecmsdg_admin
 DB_PASS=ChristSamuel
@@ -14,7 +14,8 @@ DB_PASS=ChristSamuel
 
 # Exemple MySQL :
 # DATABASE_URL="mysql://odecmsdg_admin:odec_database.@127.0.0.1:3307/odecmsdg_odecmsdg_site"
-DATABASE_URL="mysql://odecmsdg_admin:ChristSamuel@localhost:3307/odecmsdg_odecmsdg_site"
+# DATABASE_URL="mysql://odecmsdg_admin:ChristSamuel@127.0.0.1:3306/odecmsdg_odecmsdg_site"
+DATABASE_URL=postgresql://odecuser:e8GAxnufdcaVWzyrEvI6n1crCix9ppe5@dpg-d66hbk9r0fns73efp8jg-a.frankfurt-postgres.render.com/odec?schema=public&sslmode=require
 
 
 # ========== SMTP (Namecheap Private Email) ==========
@@ -41,3 +42,4 @@ NODE_ENV=production
 # Origines autorisées séparées par des virgules
 # CORS_ORIGIN=https://odec-ci.org,https://www.odec-ci.org
 CORS_ORIGIN=http://localhost:3000,http://localhost:5173,https://odec-ci.netlify.app,https://odec-ci.vercel.app/
+
